----------------------------------------------------------------------
Changes since mgtk-beta-0.02

* Added the game of NIM (examples/nim.sml) contributed by Hans Rischel.

----------------------------------------------------------------------
Changes since mgtk-beta-0.02

* New binary distribution (for Windows) that works with Moscow ML 2.00 

* The binary distribution for Windows includes a newer version of gtk+
  (version 26/12-2000)

* Support for working with the CList widget (including a small example).

----------------------------------------------------------------------
Changes since mgtk-alpha-0.01

* Added a Win32 port (thanks to Mike Thomas!).

* Added a bunch of widgets and functions from the Sugar gtk.defs file.

* Added some signals that previously clashed with other, ``more 
  important'', ones. Such a signal has as it's SML connect function
  the name ``connect_<widget name>_<signal name>''.

* Added some new examples (including a menu example and a pixmap
  example; see examples/README for further information).

* Fixed some bugs. For example,
  + command line arguments are now passed on to gtk_init.
  + short version of functions with no arguments are now also in the
    signature.
  + bugs related to Garbage Collection and (minor) space leaks.
  + more than one flag can now be given to functions expecting flags.
----------------------------------------------------------------------