@@ -20,7 +20,7 @@ fun repaint widget =
     let val window = Gtk.widget_get_window widget
 	val style  = Gtk.widget_get_style widget
 	val state  = Gtk.widget_get_state widget
-	val gc = Gtk.widget_get_style_fg_gc widget state
+	val gc = Gtk.widget_get_style_gc widget Gtk.GC_TYPE_FG state
 	val size as (width, height, _, _) = Gtk.widget_get_allocation widget
 	val centx = width div 2
 	val centy = height div 2
