@@ -697,16 +697,16 @@
 (define-func gdk_pixmap_create_from_xpm
   GdkPixmap
   ((GdkWindow window)
-   (GdkBitmap mask (null-ok)); Henning
+   (GdkBitmap mask (output)); Henning: really input-output
    (GdkColor transparent_color (null-ok))
    (static_string filename)))
 
-;;;(define-func gdk_pixmap_create_from_xpm_d
-;;;  GdkPixmap
-;;;  ((GdkWindow window)
-;;;   (GdkBitmap mask (null-ok)); Henning
-;;;   (GdkColor transparent_color (null-ok))
-;;;   (string data)))
+(define-func gdk_pixmap_create_from_xpm_d
+  GdkPixmap
+  ((GdkWindow window)
+   (GdkBitmap mask (output)); Henning: really input-output
+   (GdkColor transparent_color (null-ok))
+   ((string array-) data)))
 
 (define-func gdk_bitmap_create_from_data
   GdkBitmap
@@ -773,10 +773,29 @@
    (int xdest) (int ydest)
    (int width) (int height)))
 
-;; gdk_draw_points
-;; gdk_draw_segments
-;; gdk_draw_lines
-;; gdk_draw_polygon
+;;; GdkPoint / GDkSegment / ... are undefined
+;;;(define-func gdk_draw_points
+;;;  none
+;;;  ((GdkDrawable drawable)
+;;;   (GdkGC gc)
+;;;   ((GdkPoint array) points)))
+;;;(define-func gdk_draw_segments
+;;;  none
+;;;  ((GdkDrawable drawable)
+;;;   (GdkGC gc)
+;;;   ((GdkSegment array) segs)))
+;;;(define-func gdk_draw_lines
+;;;  none
+;;;  ((GdkDrawable drawable)
+;;;   (GdkGC gc)
+;;;   ((GdkPoint array) points)))
+;;;(define-func gdk_draw_polygon
+;;;  none
+;;;  ((GdkDrawable drawable)
+;;;   (GdkGC gc)
+;;;   (bool filled)
+;;;   ((GdkPoint array) points)))
+
 
 (define-func gdk_string_extents
   none
@@ -1461,6 +1480,25 @@
    (no-reparent GTK_NO_REPARENT)
    (app-paintable GTK_APP_PAINTABLE))
 
+; Henning added these
+(define-enum GtkGCType
+  (fg GTK_GC_TYPE_FG)
+  (bg GTK_GC_TYPE_BG)
+  (light GTK_GC_TYPE_LIGHT)
+  (dark GTK_GC_TYPE_DARK)
+  (mid GTK_GC_TYPE_MID)
+  (text GTK_GC_TYPE_TEXT)
+  (base GTK_GC_TYPE_BASE))
+
+(define-enum GtkColorType
+  (fg GTK_COLOR_TYPE_FG)
+  (bg GTK_COLOR_TYPE_BG)
+  (light GTK_COLOR_TYPE_LIGHT)
+  (dark GTK_COLOR_TYPE_DARK)
+  (mid GTK_COLOR_TYPE_MID)
+  (text GTK_COLOR_TYPE_TEXT)
+  (base GTK_COLOR_TYPE_BASE))
+
 ; Boxed types
 (define-boxed GtkAccelGroup
   gtk_accel_group_ref
@@ -1481,9 +1519,6 @@
 (define-boxed GtkCTreeRow
   
   )
-
-;;;(define-boxed GtkCTreeNode
-;;;)
 
 ; Gtk equivalents
 (define-func gtk_draw_arrow
@@ -1646,22 +1681,20 @@
 ;;;   (GdkWindow window)
 ;;;   (GtkStateType state_type)
 ;;;   (GtkShadowType shadow_type)
-;;;   (GdkPoint points)
-;;;   (int npoints)
+;;;   ((GdkPoint array) points)
 ;;;   (bool fill)))
 
-; Win32 compatibility
-;(define-func gtk_draw_ramp
-;  none
-;  ((GtkStyle style)
-;   (GdkWindow window)
-;   (GtkStateType state_type)
-;   (GtkShadowType shadow_type)
-;   (GtkArrowType arrow_type)
-;   (int x)
-;   (int y)
-;   (int width)
-;   (int height)))
+(define-func gtk_draw_ramp
+  none
+  ((GtkStyle style)
+   (GdkWindow window)
+   (GtkStateType state_type)
+   (GtkShadowType shadow_type)
+   (GtkArrowType arrow_type)
+   (int x)
+   (int y)
+   (int width)
+   (int height)))
 
 (define-func gtk_draw_shadow
   none
@@ -1674,33 +1707,31 @@
    (int width)
    (int height)))
 
-; Win32 compatibility
-;(define-func gtk_draw_shadow_gap
-;  none
-;  ((GtkStyle style)
-;   (GdkWindow window)
-;   (GtkStateType state_type)
-;   (GtkShadowType shadow_type)
-;   (int x)
-;   (int y)
-;   (int width)
-;   (int height)
-;   (GtkPositionType gap_side)
-;   (int gap_x)
-;   (int gap_width)))
+(define-func gtk_draw_shadow_gap
+  none
+  ((GtkStyle style)
+   (GdkWindow window)
+   (GtkStateType state_type)
+   (GtkShadowType shadow_type)
+   (int x)
+   (int y)
+   (int width)
+   (int height)
+   (GtkPositionType gap_side)
+   (int gap_x)
+   (int gap_width)))
 
-; Win32 compatibility
-;(define-func gtk_draw_slider
-;  none
-;  ((GtkStyle style)
-;   (GdkWindow window)
-;   (GtkStateType state_type)
-;   (GtkShadowType shadow_type)
-;   (int x)
-;   (int y)
-;   (int width)
-;   (int height)
-;   (GtkOrientation orientation)))
+(define-func gtk_draw_slider
+  none
+  ((GtkStyle style)
+   (GdkWindow window)
+   (GtkStateType state_type)
+   (GtkShadowType shadow_type)
+   (int x)
+   (int y)
+   (int width)
+   (int height)
+   (GtkOrientation orientation)))
 
 (define-func gtk_draw_string
   none
@@ -1711,17 +1742,16 @@
    (int y)
    (static_string string)))
 
-; Win32 compatibility
-;(define-func gtk_draw_tab
-;  none
-;  ((GtkStyle style)
-;   (GdkWindow window)
-;   (GtkStateType state_type)
-;   (GtkShadowType shadow_type)
-;   (int x)
-;   (int y)
-;   (int width)
-;   (int height)))
+(define-func gtk_draw_tab
+  none
+  ((GtkStyle style)
+   (GdkWindow window)
+   (GtkStateType state_type)
+   (GtkShadowType shadow_type)
+   (int x)
+   (int y)
+   (int width)
+   (int height)))
 
 (define-func gtk_draw_vline
   none
@@ -1919,10 +1949,18 @@
    (int x (output))
    (int y (output))))
 
-(define-func gtk_widget_get_style_fg_gc
+(define-func gtk_widget_get_style_gc
   GdkGC
   ((GtkWidget widget)
+   (GtkGCType typ)
    (GtkStateType state)))
+
+(define-func gtk_widget_get_style_color
+  none
+  ((GtkWidget widget)
+   (GtkColorType typ)
+   (GtkStateType state)
+   (GdkColor color (output))))
 
 (define-func gtk_widget_destroy
   none
@@ -2161,7 +2199,12 @@
   GdkEventMask
   ((GtkWidget widget)))
 
-;;gtk_widget_get_pointer
+;;;Henning, check this
+;;;(define-func gtk_widget_get_pointer
+;;;  none
+;;;  ((GtkWidget widget)
+;;;   (int x (output))
+;;;   (int y (output))))
 
 (define-func gtk_widget_is_ancestor
   bool
@@ -2318,7 +2361,7 @@
   ((GtkContainer container)))
 
 ;;;(define-func gtk_container_children
-;;;  GList*
+;;;  (GtkWidget list)
 ;;;  ((GtkContainer container)))
 
 (define-func gtk_container_child_composite_name
@@ -2366,13 +2409,9 @@
   none
   ((GtkContainer container)))
 
-; Win32 compatibility
-;(define-func gtk_container_dequeue_resize_handler
-;  none
-;  ((GtkContainer container)))
-
-;gtk_container_child_set
-;gtk_container_child_get
+(define-func gtk_container_dequeue_resize_handler
+  none
+  ((GtkContainer container)))
 
 ;;;(define-func gtk_container_get_toplevels
 ;;;  GList*
@@ -3801,7 +3840,12 @@
   ((GtkPixmap pixmap)
    (GdkPixmap valu)
    (GdkBitmap mask)))
-;;gtk_pixmap_get
+
+(define-func gtk_pixmap_get
+   none
+   ((GtkPixmap pixmap)
+    (GdkPixmap valu (output))
+    (GdkPixmap mask (output))))
 
 (define-func gtk_pixmap_set_build_insensitive
   none
@@ -3826,9 +3870,17 @@
   ((GtkColorSelection colorsel)
    (bool use_opacity)))
 
-;; (define-func gtk_color_selection_set_color)
+;;;(define-func gtk_color_selection_set_color)
+;;;   none
+;;;   ((GtkColorSelection colorsel)
+;;;    ((double array-) color)))
 
-;; (define-func gtk_color_selection_get_color)
+
+;;;(define-func gtk_color_selection_get_color)
+;;;   none
+;;;   ((GtkColorSelection colorsel)
+;;;    ((double array-) color)))
+
 
 ; ColorSelectionDialog
 
@@ -4270,7 +4322,10 @@
   GtkCList
   ((int columns)))
 
-;; gtk_clist_new_with_titles
+(define-func gtk_clist_new_with_titles
+  none
+  ((int columns)
+   ((string array-) titles)))
 
 (define-func gtk_clist_set_shadow_type
  none
@@ -4460,7 +4515,13 @@
    (int column)
    (string text (output))))
 
-;; gtk_clist_get_pixmap
+(define-func gtk_clist_get_pixmap
+  bool
+  ((GtkCList clist)
+   (int row)
+   (int column)
+   (GdkPixmap pixmap (output))
+   (GdkBitmap mask (output))))
 
 (define-func gtk_clist_set_pixmap
   none
@@ -4468,6 +4529,17 @@
    (int row) (int col)
    (GdkPixmap pixmap)
    (GdkBitmap mask)))
+
+;;; spacing is an guint8 (and a pointer to unsigned int is
+;;; incompatible with pointer to guint8)
+;(define-func gtk_clist_get_pixtext
+;  bool
+;  ((GtkCList clist)
+;   (int row) (int col)
+;   (string text (output))
+;   (uint spacing (output))
+;   (GdkPixmap pixmap (output))
+;   (GdkBitmap mask (output))))
 
 (define-func gtk_clist_set_pixtext
   none
@@ -4533,9 +4605,19 @@
   ((GtkCList clist)
    (int row)))
 
-;; gtk_clist_prepend
-;; gtk_clist_append
-;; gtk_clist_insert
+(define-func gtk_clist_prepend
+  int
+  ((GtkCList clist)
+   ((string array-) text)))
+(define-func gtk_clist_append
+  int
+  ((GtkCList clist)
+   ((string array-) text)))
+(define-func gtk_clist_insert
+  int
+  ((GtkCList clist)
+   (int row)
+   ((string array-) text)))
 
 (define-func gtk_clist_remove 
   none
@@ -4641,26 +4723,26 @@
   GtkList
   ())
 
-;;;(define-func gtk_list_insert_items
-;;;  none
-;;;  ((GtkList list)
-;;;   (GList* items)
-;;;   (int position)))
+(define-func gtk_list_insert_items
+  none
+  ((GtkList list)
+   ((GtkWidget list) items)
+   (int position)))
 
-;;;(define-func gtk_list_append_items
-;;;  none
-;;;  ((GtkList list)
-;;;   (GList* items)))
+(define-func gtk_list_append_items
+  none
+  ((GtkList list)
+   ((GtkWidget list) items)))
 
-;;;(define-func gtk_list_prepend_items
-;;;  none
-;;;  ((GtkList list)
-;;;   (GList* items)))
+(define-func gtk_list_prepend_items
+  none
+  ((GtkList list)
+   ((GtkWidget list) items)))
 
-;;;(define-func gtk_list_remove_items
-;;;  none
-;;;  ((GtkList list)
-;;;   (GList* items)))
+(define-func gtk_list_remove_items
+  none
+  ((GtkList list)
+   ((GtkWidget list) items)))
 
 (define-func gtk_list_clear_items
   none
@@ -4759,14 +4841,30 @@
 
 (define-object GtkCTree (GtkCList))
 
-;; gtk_ctree_new_with_titles
+(define-func gtk_ctree_new_with_titles
+  GtkCTree
+  ((int columns)
+   (int tree_column)
+   ((string array-) titles)))
 
 (define-func gtk_ctree_new
   GtkCTree
   ((int columns)
    (int tree_column)))
 
-;;gtk_ctree_insert_node
+(define-func gtk_ctree_insert_node
+  GtkCTreeNode
+  ((GtkCTree ctree)
+   (GtkCTreeNode parent (null-ok))
+   (GtkCTreeNode sibling (null-ok))
+   ((string array-) text)
+   (int spacing)
+   (GdkPixmap pixmap_closed (null-ok))
+   (GdkBitmap mask_closed (null-ok))
+   (GdkPixmap pixmap_opened (null-ok))
+   (GdkBitmap mask_opened (null-ok))
+   (bool is_leaf)
+   (bool expanded)))
 
 (define-func gtk_ctree_remove_node
   none
@@ -4953,8 +5051,26 @@
    (int column)
    (string text (output))))
 
-;; gtk_ctree_node_get_pixmap
-;; gtk_ctree_node_get_pixtext
+(define-func gtk_ctree_node_get_pixmap
+  bool
+  ((GtkCTree ctree)
+   (GtkCTreeNode node)
+   (int column)
+   (GdkPixmap pixmap (output))
+   (GdkBitmap mask (output))))
+
+;;; spacing is an guint8 (and a pointer to unsigned int is
+;;; incompatible with pointer to guint8)
+;(define-func gtk_ctree_node_get_pixtext
+;  bool
+;  ((GtkCTree ctree)
+;   (GtkCTreeNode node)
+;   (int column)
+;   (string text (output))
+;   (uint spacing (output))
+;   (GdkPixmap pixmap (output))
+;   (GdkBitmap mask (output))))
+
 ;; gtk_ctree_get_node_info
 
 (define-func gtk_ctree_node_set_row_style
